test/fail/api/string_to_i_empty.lly
#[
ValueError: Invalid base 10 literal ''.
Traceback:
    File "[builtin]", from string::to_i
    File "string_to_i_empty.lly", from __main__ at line 8
]#

"".to_i()
